Messed up z-indexes.. fixed

--- a/assets/src/scss/partials/_app.scss
+++ b/assets/src/scss/partials/_app.scss
@@ -1,6 +1,7 @@
 .app {
 
 	&__navigation {
+		z-index: 100;
 		position: fixed;
 		bottom: 0;
 		left: 0;
